includes/admin/ui/css/admin-product.css
/* ... */
.variation_color_17,
.variation_color_17 a{
    color: #C0392B;
}

tr.variation_row_color_17 .text-core .text-wrap .text-tags .text-tag .text-button{
    background: #C0392B;
    border-color: #C0392B;
    margin: 1px 3px 1px 0px;
}

.variation_color_18,
.variation_color_18 a{
    color: #34495E;
}

tr.variation_row_color_18 .text-core .text-wrap .text-tags .text-tag .text-button{
    background: #34495E;
    border-color: #34495E;
    margin: 1px 3px 1px 0px;
}


.variation_color_19,
.variation_color_19 a{
    color: #27ae60;
}

tr.variation_row_color_19 .text-core .text-wrap .text-tags .text-tag .text-button{
    background: #27ae60;
    border-color: #27ae60;
    margin: 1px 3px 1px 0px;
}

.variation_color_20,
.variation_color_20 a{
    color: #763eaf;
}

tr.variation_row_color_20 .text-core .text-wrap .text-tags .text-tag .text-button{
    background: #763eaf;
    border-color: #763eaf;
    margin: 1px 3px 1px 0px;
}

.select_attributes_filter{
    margin-top:10px;
    margin-bottom: 10px;
}

.select_all a, .select_none a{
    font-weight: bold;
    color: #000;
    text-decoration: none;
}

.select_attributes_filter a{
    text-decoration: none;
    outline: 0;
}

.select_attributes_filter a.selected{
    text-decoration: underline;
    outline: 0;
}

.select_attributes_filter .variation_color:last-child .separating-pipe{
    display: none;
}

select.mp_product_attributes_select {
    margin-top: 7px;
    width: 100%;
}

textarea.variation_values {
    margin-top: 7px;
    width: 100%;
}

.variation-row .text-core .text-wrap{
    width: 100% !important
}

.variation-row .text-wrap{
    margin-top: 7px;
}

.variation-row .text-core .variation_values{
    width: 100% !important;
    min-height: 64px;
    font-size: 14px;
    font-family: inherit;
}

.variation-row .text-core .text-wrap .text-tags .text-tag .text-button{
    font-size: 14px;
    font-family: inherit;
    height: 22px;
    color: #fff;
}

.variation-row .text-core .text-wrap .text-tags .text-tag .text-button a.text-remove{
    top: 4px;
}

a.add.mp-add-new-variation.button{
    margin-top: 10px;
}

a.create-variations-button.button{
    margin-top: 10px;
    margin-left: 20px;
}

.field_editable{
    position: relative;
}

.original_value{
    min-width: 50px;
}

.mp-inline-edit-hover{

}

.inline-edit-icon{
    margin-left: 5px;
}

input.mp_inline_temp_value{
    line-height: 1 !important;
    padding: 5px !important;
    width: 80% !important;
    max-width: 100px !important;
    position: absolute;
    top: 1px;
    margin-left: -6px;
    font-size: 13px;
}

.mp_hidden_content{
    display: none;
}

.mp_popup_controls{
    border-top: 1px solid #ddd;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 12px;
    padding-bottom: 12px;
    position: absolute;
    bottom: 0;
    width: 90%;
    background-color: #fff;
}

.mp_popup_controls a.button{
    float: right;
    margin-left: 15px;
    display: inline-block;
}

.mp_popup_content{
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
    padding-bottom: 40px;
}

.mp_popup_content label{
    width: 100%;
    font-weight: bold;
    display: block;
}

.mp_popup_content input{
    width: 100%;
}

.mp_variations_table_box .widefat td{
    vertical-align: middle;
    padding: 4px 10px;
}

.mp_variations_table_box .widefat td.mp-variation-image{
    padding-bottom: 0px;
}

.mp_variations_table_box .widefat td.mp-variation-image img:hover{
    border: 3px solid #763eaf;
    width: 24px;
    height: 24px;
}

#variation_popup .mp-variation-image img:hover{
    border: 3px solid #763eaf;
    width: 69px;
    height: 69px;
}

#variation_popup .remove_popup_image{
    font-size: 11px;
}

#variation_popup label.error{
    /*position: absolute !important;*/
}

#variation_popup .regular_price{
    margin-right: 0%;
}

#variation_popup .mp-variation-field .wpmudev-field-label {
    margin-bottom: 3px;
}

#variation_popup .mp_popup_content label{
    width: auto !important;
}

#variation_popup .mp-variation-field{
    margin-bottom: 10px;
}

.mp_popup_content #variation_popup input[type=checkbox]{
    width: auto;
}

#variation_popup fieldset{
    background-color: #f7f7f7;
    padding: 10px;
    margin-top: 10px;
}

#cboxLoadedContent{
    padding-top: 54px !important;
}

#cboxLoadedContent .mp_more_popup{
    overflow-y: auto;
    height: inherit;
}

.fieldset_check{
    margin-top: 10px;
    padding-bottom: 5px;
}

.mp-product-field-last{
    margin-right: 0%;
}

.mp_popup_content input#file_url{
    width: 70%;
}

.mp_popup_content input#file_url_button{
    width: 27%;
    margin-left: 1%;
}

.mp_ajax_response{
    display: inline-block;
    padding-top: 3px;
}

.mp_ajax_response_success{
    color: green;
}

.mp_ajax_response_fail{
    color: red;
}

#variation_popup .variation_description{
    width: 100%;
    height: 100px;
    margin-top: 10px;
}

#postimagediv,
#revisionsdiv{
    display: none;
}

/* Product images */

.postbox.wpmudev-postbox .inside .mp_product_images div.wpmudev-subfield-group{
    width: auto;
    display: inline-block;
}

.postbox.wpmudev-postbox .inside .mp_product_images .wpmudev-subfield-group-wrap{
    background: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    margin-bottom: 10px;
    padding: 0px;
}

.postbox.wpmudev-postbox .inside .mp_product_images .wpmudev-subfields{
    -webkit-box-shadow: none; 
    box-shadow: none; 
    border: 0px; 
}

.postbox.wpmudev-postbox .inside .mp_product_images .wpmudev-subfield-group:nth-child(even), 
.postbox.wpmudev-postbox .inside .mp_product_images .wpmudev-subfield-group:nth-child(even) td{
    background: none;
}

.postbox.wpmudev-postbox .inside .wpmudev-subfield-group:nth-child(even),
.postbox.wpmudev-postbox .inside .wpmudev-subfield-group:nth-child(even) td{
    background: none;
}

.postbox.wpmudev-postbox .inside .mp_product_images .wpmudev-subfield-group{
    border: 0px;
}
/* ... */

